EDO-93 Fix scrolling bug in team status component on small screens

--- a/src/main/webapp/app/teams/teams-status.scss
+++ b/src/main/webapp/app/teams/teams-status.scss
@@ -1,6 +1,7 @@
 @import '../../content/scss/colors';
 .teams-status {
     height: inherit;
+    position: relative;
     overflow-y: auto;
     padding-right: 10px;
     .teams-status-avatar {
